- added tree component - handle parent-child relations in backend - still missing: creation of child documents
