# server/controllers/DatasetsService.js
@@ -1,6 +1,42 @@
 'use strict';
 var db = require('../db/dbInterface');
 
+/**
+ *
+ * @param docs
+ * @param {Object[]} fields
+ * @returns {Array}
+ */
+var extractFields = function (docs, fields) {
+  var result = [];
+  docs.forEach(function (doc) {
+    // get all requested fields from the docs to satisfy the client for whatever
+    // it will do with the result
+    var obj = {};
+    fields.forEach(function (field) {
+      var subFields = field.split('.');
+      var value = null;
+      if (subFields.length > 1) {
+        value = doc;
+        subFields.forEach(function (sub) {
+          if (value === undefined) {
+            return;
+          }
+          value = value[sub];
+        });
+      } else {
+        value = doc ? doc[field] : undefined;
+      }
+
+      if (value !== undefined) {
+        obj[field] = value;
+      }
+    });
+    result.push(obj);
+  });
+  return result;
+};
+
 exports.find = function(args, res, next) {
   /**
    * parameters expected in the args:
@@ -10,33 +46,7 @@ exports.find = function(args, res, next) {
   var fields = args.fields.value.split(',');
   db.findDocuments(query).then(function (docs) {
     console.log('FOUND', docs.length);
-    var result = [];
-    docs.forEach(function (doc) {
-      // get all requested fields from the docs to satisfy the client for whatever
-      // it will do with the result
-      // TODO: iterate over all fields
-      var obj = {};
-      fields.forEach(function (field) {
-        var subFields = field.split('.');
-        var value = null;
-        if (subFields.length > 1) {
-          value = doc;
-          subFields.forEach(function (sub) {
-            if (value === undefined) {
-              return;
-            }
-            value = value[sub];
-          });
-        } else {
-          value = doc ? doc[field] : undefined;
-        }
-
-        if (value !== undefined) {
-          obj[field] = value;
-        }
-      });
-      result.push(obj);
-    });
+    var result = extractFields(docs, fields);
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(result, null, 2))
 
@@ -47,12 +57,27 @@ exports.find = function(args, res, next) {
   });
 };
 
+exports.children = function(args, res, next) {
+  var id = args.parentId.value;
+  var fields = args.fields.value.split(',');
+
+  // convert empty id to null object for requesting root datasets
+  if (id === undefined) id = null;
+
+  db.getChildDocuments(id).then(function (docs) {
+    // TODO: only return requested fields instead of whole documents as in findDocuments
+    var result = extractFields(docs, fields);
+    res.end(JSON.stringify(result, null, 2));
+  });
+
+};
+
 exports.getByID = function(args, res, next) {
   /**
    * parameters expected in the args:
-  * id (String)
-  * publish (Boolean)
-  **/
+   * id (String)
+   * publish (Boolean)
+   **/
 
   var id = args.id.value;
   var publishedVersion = args.publish.value;
@@ -60,7 +85,6 @@ exports.getByID = function(args, res, next) {
   db.getDocument(id, publishedVersion).then(function (doc) {
     console.log('FOUND', doc);
     res.setHeader('Content-Type', 'application/json');
-    // res.status(200).json(dataset);
     res.end(JSON.stringify(doc, null, 2))
 
   }, function (err) {
